# automerge-subduction

./: .gitignore  Cargo.toml  README.md  UNIFIED_AUTOMERGE_SUBDUCTION_WASM_SPEC.md  package.json  pnpm-lock.yaml
crates/automerge_subduction_unified_wasm/: Cargo.toml
crates/automerge_subduction_unified_wasm/src/: automerge_api.rs  automerge_change.rs  automerge_sync.rs  error.rs  lib.rs
js/: README.md  build_slim.js  package-dist.js  package.json  slim-shim.ts  tsconfig.json  vite.config.ts
js/src/: bundler.ts  index.ts  node.ts  slim.ts  workerd.ts
js/test/: memory-smoke.test.ts  package-output.test.ts  reinit-wasm.test.ts  unified-wasm.test.ts
