[package]
name = "automerge_subduction_unified_wasm"
version = "0.1.0"
description = "Unified WASM bindings for Automerge documents and Subduction replication"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = { workspace = true }
automerge_subduction_wasm = { workspace = true, features = ["console_error_panic_hook", "idb", "std"] }
console_error_panic_hook = { workspace = true, optional = true }
js-sys = { workspace = true }
sedimentree_wasm = { workspace = true, features = ["idb", "std"] }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook", "std"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
std = ["wasm-bindgen/std"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-Oz",
  "--enable-bulk-memory",
  "--enable-multivalue",
  "--enable-mutable-globals",
  "--enable-nontrapping-float-to-int",
  "--enable-reference-types",
  "--enable-sign-ext",
  "--enable-simd"
]
